[gd_scene load_steps=14 format=3 uid="uid://cmfnadw1ylpyf"]

[ext_resource type="Script" uid="uid://cos260vgbsf5b" path="res://Main/viewer.gd" id="1_4svvv"]
[ext_resource type="PackedScene" uid="uid://bve6skbomtefn" path="res://Main/Debug/screen_info.tscn" id="2_4u6o0"]
[ext_resource type="FontFile" uid="uid://b2m567grun6v" path="res://Resources/JetBrainsMono[wght].ttf" id="3_4x6nb"]
[ext_resource type="PackedScene" uid="uid://de13n80dn1s4p" path="res://Main/free_cam.tscn" id="4_0h4f8"]
[ext_resource type="PackedScene" uid="uid://b2r5hpb68kegk" path="res://MarchingCube/chunk_manager.tscn" id="5_dmqh6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knbb0"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.5647059)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohd1f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0d22"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_1u2ra"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_670gy"]
shading_mode = 2
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
disable_fog = true
vertex_color_use_as_albedo = true
albedo_color = Color(100, 100, 100, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 30.0
disable_receive_shadows = true
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="Environment" id="Environment_l0uo2"]
background_mode = 1
background_energy_multiplier = 0.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.03
glow_enabled = true
glow_normalized = true
glow_intensity = 1.0
glow_bloom = 1.0
glow_blend_mode = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jwgjv"]
transparency = 1
shading_mode = 0
diffuse_mode = 3
specular_mode = 2
disable_ambient_light = true
disable_fog = true
disable_specular_occlusion = true
albedo_color = Color(0, 1, 0.6333332, 0.19607843)

[sub_resource type="SphereMesh" id="SphereMesh_50ggj"]
material = SubResource("StandardMaterial3D_jwgjv")
radius = 0.1
height = 0.2

[node name="Viewer" type="Node3D"]
script = ExtResource("1_4svvv")

[node name="UI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Control" type="Control" parent="UI"]
layout_mode = 2
mouse_filter = 1

[node name="DebugInfo" type="PanelContainer" parent="UI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_knbb0")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/DebugInfo"]
layout_mode = 2

[node name="ScreenInfo" parent="UI/Control/DebugInfo/VBoxContainer" instance=ExtResource("2_4u6o0")]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24

[node name="GenTimeLabel" type="Label" parent="UI/Control/DebugInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4x6nb")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohd1f")
text = "Gen. Time :"

[node name="ControlInfo" type="PanelContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -319.0
offset_bottom = 119.0
grow_horizontal = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_knbb0")

[node name="Label" type="Label" parent="UI/Control/ControlInfo"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4x6nb")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohd1f")
text = "Movement: wasd ctrl space
Cam look: Right click hold
Add Vol.: Q / =
Remove Vol.: E / -"

[node name="CreditLabel" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -303.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_4x6nb")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohd1f")
text = "jupiterbjy@gmail.com"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MapGenDebug" type="PanelContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -168.0
offset_right = 240.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/MapGenDebug"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/MapGenDebug/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_n0d22")
text = "MapGenDebug"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Control/MapGenDebug/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="ThreadSpinbox" type="SpinBox" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 1.0
alignment = 3
prefix = "Threads"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Seed"

[node name="SeedLineEdit" type="LineEdit" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "219"
placeholder_text = "Seed"
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Smooth"

[node name="SmoothSlider" type="HSlider" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="MethodOptionButton" type="OptionButton" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0

[node name="RegenButton" type="Button" parent="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "Regenerate"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)
shadow_enabled = true

[node name="Sun" type="MeshInstance3D" parent="DirectionalLight3D"]
transform = Transform3D(21.23, 0, 0, 0, 21.23, -2.84717e-06, 0, 2.84717e-06, 21.23, 0, -6.70552e-05, 500)
cast_shadow = 0
mesh = SubResource("QuadMesh_1u2ra")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_670gy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l0uo2")

[node name="FreeCam" parent="." instance=ExtResource("4_0h4f8")]
impulse_multiplier = 8.0

[node name="MouseHitPoint" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_50ggj")

[node name="ChunkManager" parent="." instance=ExtResource("5_dmqh6")]
chunks_dimension = Vector3i(16, 3, 16)

[connection signal="text_submitted" from="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/SeedLineEdit" to="." method="_on_seed_line_edit_text_submitted"]
[connection signal="pressed" from="UI/Control/MapGenDebug/VBoxContainer/MarginContainer/VBoxContainer2/RegenButton" to="." method="_on_regen_button_pressed"]
